--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,25 @@
 body {
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  margin: 20px;
+  background: rgb(216, 216, 216);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+}
+
+input {
+  border: none;
+  border-radius: 2px;
+  text-align: right;
+}
+
+label {
+  align-items: left;
 }
 
 code {
